<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ========= GAV ========= -->
    <groupId>tr.kontas.fluentvalidation</groupId>
    <artifactId>fluentvalidation-pom</artifactId>
    <version>1.0.7</version>
    <packaging>pom</packaging>

    <!-- ========= MODULES ========= -->
    <modules>
        <module>core</module>
        <module>spring</module>
        <module>aspectj</module>
    </modules>

    <!-- ========= METADATA ========= -->
    <name>FluentValidation</name>
    <description>
        A fluent validation library for Java inspired by the .NET FluentValidation library.
    </description>
    <url>https://github.com/BurakKontas/fluentvalidation</url>

    <licenses>
        <license>
            <name>GPL-3.0 license</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Arda Burak Kontaş</name>
            <email>aburakkontas@hotmail.com</email>
            <organization>BurakKontas</organization>
            <organizationUrl>https://github.com/BurakKontas</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/BurakKontas/fluentvalidation.git</connection>
        <developerConnection>scm:git:ssh://github.com/BurakKontas/fluentvalidation.git</developerConnection>
        <url>https://github.com/BurakKontas/fluentvalidation</url>
        <tag>HEAD</tag>
    </scm>

    <!-- ========= PROPERTIES ========= -->
    <properties>
        <!-- Java -->
        <java.version>17</java.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Spring Boot -->
        <spring.boot.version>3.0.11</spring.boot.version>

        <!-- AspectJ -->
        <aspectj.version>1.9.25.1</aspectj.version>
    </properties>

    <!-- ========= DEPENDENCY MANAGEMENT ========= -->
    <dependencyManagement>
        <dependencies>

            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>tr.kontas.fluentvalidation</groupId>
                <artifactId>fluentvalidation-core</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- ========= BUILD ========= -->
    <build>
        <pluginManagement>
            <plugins>

                <!-- Compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>

                <!-- Source -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>

                <!-- Javadoc -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                </plugin>

                <!-- GPG -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>

                <!-- Central Publishing -->
                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.6.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <publishingServerId>central</publishingServerId>
                        <autoPublish>true</autoPublish>
                        <waitUntil>published</waitUntil>
                    </configuration>
                </plugin>

                <!-- Disable legacy deploy -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <!-- ========= RELEASE PROFILE ========= -->
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.6.0</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>publish-to-central</id>
                                <phase>deploy</phase>
                                <goals>
                                    <goal>publish</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

</project>
